<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SmartCrossing</string>
    <string name="near_points">Points near to you:</string>
    <string name="map">Map</string>
    <string name="b_count">Book count:</string>
    <string name="b_add">Add a book</string>
    <string name="b_title">&#0160;Title</string>
    <string name="b_author">&#0160;Author</string>
    <string name="b_year">&#0160;Year</string>
    <string name="year">&#0160;Year: </string>
    <string name="b_genre">&#0160;Page count</string>
    <string name="add_book_m">Add book manually</string>
    <string name="add_book_a">Add book by barcode</string>
    <string name="add_station">Add station</string>
    <string name="points">Points:</string>
    <string name="badges">Badges:</string>
    <string name="gtrank">Go to ranking:</string>
    <string name="distance">Distance: </string>
    <string name="added_by">Added by:</string>
    <string name="books_null">There is no books here</string>
    <string name="set_category">Choose category</string>
    <string name="set_date">Choose date od Release</string>
    <string name="cat">Category: </string>
    <string name="isbn">ISBN: </string>
    <string name="visit_profile">Visit profile </string>
    <string name="no_near_bookshelves">We\'re sorry but there is no any bookshelf near you\nyou can add one by clicking \"plus\" button\nin home screen</string>
    <string name="crash_not_signed_in">Last time app crashed, due to security reasons - you were signed out</string>
    <string name="VOTE_SUCCESSFULL">Zagłosowałeś pomyślnie</string>
    <string name="NEW_REQUEST">New bookshelf proposition</string>
    <string name="NEW_REQUESTS">New bookshelf propositions </string>
    <string name="first_run">Welcome to our Bookcrossing app! The app that was made in one week, during the hackathon "Hack Heroes" brought by Apka.org. That\'s why Bookshelves that are already in the app are just for testing, they\'re not real. Also, not all of the features are avaiable right now, because of, again, testing by Jury. After the competition is done, you have to be less than 50 meters from bookshelf that you want to interact with. Now, there is only a popup that says you are further from bookshelf. But apart from that, app is fully working. Happy Bookcrossing! -BcrossTeam</string>
    <string name="borrow_book">Take book</string>
    <string name="return_book">Release book</string>
    <string name="ret_distance_too_long">After hackaton app will throw Error: You should be closer than 100m (0.062 miles)\nto return a book to a bookshelf.\nNow I am not going to organise honorable comitee free walk</string>
    <string name="bor_distance_too_long">After hackaton app will throw Error: You should be closer than 100m (0.062 miles)\nto borrow a book from a bookshelf.\nNow I am not going to organise honorable comitee free walk</string>
    <string name="search_in_books">Search in books: </string>
    <string name="title_activity_user_profile">User profile</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_slide_in_menu">Slide in menu</string>
    <string name="title_activity_current_user_activiy">User account</string>
    <string name="title_activity_challenge_screen">Challenge</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_user_settings">Managing account</string>
    <string name="action_settings">Settings</string>
    <string name="singIn">Sign in</string>
    <string name="singUp">Sign up</string>
    <string name="login">Login</string>
    <string name="email">E-mail address</string>
    <string name="email_confirmation">Confirm e-mail address</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="username">Username</string>
    <string name="profile">My profile</string>
    <string name="addfriend">Add friend</string>
    <string name="friends">Friends</string>
    <string name="pro">Upgrade to pro</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="home">Home page</string>
    <string name="challengesb">Challenge somebody</string>
    <string name="logged_in">Logged in</string>
    <string name="logged_out">Signed out</string>
    <string name="logged_out_fail">Error: signing out failed</string>
    <string name="enter_search_phrase">Enter a phrase to search book\nin our database.</string>
    <string name="book_not_found">I didn\'t find any book\nmatching your request.</string>
    <string name="bshelf_name_null">Enter bookshelf name</string>
    <string name="ru_ready">Are you ready for challenges?</string>
    <string name="goFuckYourself">Go fuck yourself</string>
    <string name="loading">Loading…</string>
    <string name="loadingEnd">Finished loading</string>
    <string name="unlimited_challenges">- Unilimited challenges per day</string>
    <string name="open_challenges">- Creating open challenges</string>
    <string name="no_ads">- No ads</string>
    <string name="unlimited_ch_and_groups">- Challenges and group without user limit</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac.</string>
    <string name="participants" translatable="false">+%1$d</string>
    <string name="you_have_new_challenge">You have %1$d %2$s</string>
    <string name="new_challenge">New challenge request</string>
    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>
    <string name="ERROR_INTERNAL">Error: Internal server error</string>
    <string name="ERROR_MYSQL_CONNECT">Error: An error occurred while connecting to database. (MYSQL_CONNECT)</string>
    <string name="ERROR_MYSQL_PREPARE">Error: An error occurred while connecting to database. (MYSQL_PREPARE)</string>
    <string name="ERROR_MYSQL_BIND_PARAM">Error: An error occurred while connecting to database. (MYSQL_BIND_PARAM)</string>
    <string name="ERROR_MYSQL_EXECUTE">Error: An error occurred while connecting to database. (MYSQL_EXECUTE)</string>
    <string name="ERROR_MYSQL_STORE_RESULT">Error: An error occurred while connecting to database. (MYSQL_STORE_RESULT)</string>
    <string name="ERROR_MYSQL_BIND_RESULT">Error: An error occurred while connecting to database. (MYSQL_BIND_RESULT)</string>
    <string name="ERROR_INPUT_EMPTY">Error: Server has not received any data.</string>
    <string name="ERROR_INPUT_INVALID">Error: Invalid data has been sent to server.</string>
    <string name="ERROR_UPLOAD_SIZE">Error: An error occurred while uploading file. (Size limit exceeded)</string>
    <string name="ERROR_UPLOAD_PARTIAL">Error: An error occurred while uploading file. (File partially uploaded)</string>
    <string name="ERROR_UPLOAD_NO_FILE">Error: An error occurred while uploading file. (No file uploaded)</string>
    <string name="ERROR_UPLOAD_SERVER">Error: An error occurred while uploading file. (Unknown server error)</string>
    <string name="ERROR_UPLOAD_SAVE_FILE">Error: An error occurred while uploading file. (Cannot save file)</string>
    <string name="ERROR_USER_NOT_EXISTS">Error: User not exists.\nMake sure you are using login instead of username.</string>
    <string name="ERROR_USER_ACTIVATED">Error: User account has been already activated.</string>
    <string name="ERROR_USER_UNACTIVATED">Error: Account has not been activated.</string>
    <string name="ERROR_USER_DEACTIVATED">Error: Account has been deactivated.</string>
    <string name="ERROR_USER_BANNED">Error: Account has been banned.</string>
    <string name="ERROR_USER_NOT_SIGNED_IN">Error: User not signed in.</string>
    <string name="ERROR_USER_AUTH_PASSWORD">Invalid password.</string>
    <string name="ERROR_USER_AUTH_TOKEN">Invalid authentication token.</string>
    <string name="ERROR_USER_INVALID_PASSWORD_LIMIT_EXCEEDED">Invalid sign in attempts limit exceeded. Signing in has been locked for 10 minutes.</string>
    <string name="ERROR_USER_INVALID_PASSWORD_LIMIT_EXCEEDED_DYNAMIC">Invalid sign in attempts limit exceeded.\nSigning in will be enabled in %s</string>
    <string name="ERROR_USER_ALREADY_EXISTS">Error: User already exists.</string>
    <string name="ERROR_USER_FETCH_PERMISSION">Error: Permission denied. Cannot fetch user data.</string>
    <string name="ERROR_USER_EMAIL_NOT_MATCH">Error: E-mail not match account e-mail address.</string>
    <string name="RESULT_USER_SIGNED_UP">Signed up. Activation e-mail has been sent to given address.</string>
    <string name="RESULT_USER_SIGNED_IN">Signed in</string>
    <string name="RESULT_USER_AUTHENTICATED">Signed in</string>
    <string name="RESULT_USER_SIGNED_OUT">Signed out</string>
    <string name="RESULT_USER_DEACTIVATED">Account has been deactivated.</string>
    <string name="RESULT_USER_PASSWORD_RESET">Password has been reset and sent to Your\'s e-mail address.</string>
    <string name="RESULT_USER_PASSWORD_CHANGED">Password has been changed.</string>
    <string name="RESULT_USER_NAME_CHANGED">Username has been changed.</string>
    <string name="RESULT_USER_DESCRIPTION_CHANGED">User description has been changed.</string>
    <string name="RESULT_USER_EMAIL_ADDRESS_CHANGE_REQUESTED">E-mail address has been changed. Confirmation email has been sent to new e-mail address.</string>
    <string name="RESULT_USER_AVATAR_CHANGED">Avatar has been changed.</string>
    <string name="ERROR_RELATION_NOT_EXISTS">Error: You have no relation with this user.</string>
    <string name="ERROR_RELATION_FETCH_PERMISSION">Error: Permission denied. Cannot fetch relation data.</string>
    <string name="ERROR_RELATION_REQUEST_ALREADY_SENT">Error: Friend request already sent.</string>
    <string name="ERROR_RELATION_ALREADY_FRIENDS">Error: You are friends already.</string>
    <string name="ERROR_RELATION_ALREADY_BLOCKED">Error: User already blocked.</string>
    <string name="ERROR_RELATION_WAS_BLOCKED">Error: This user have been blocked already.</string>
    <string name="ERROR_RELATION_IS_BLOCKED">Error: This user have blocked You.</string>
    <string name="RESULT_RELATION_REQUEST_SENT">Friend request sent.</string>
    <string name="RESULT_RELATION_REQUEST_CANCELED">Friend request canceled.</string>
    <string name="RESULT_RELATION_REQUEST_ACCEPTED">Friend request accepted.</string>
    <string name="RESULT_RELATION_REQUEST_REJECTED">Friend request rejected.</string>
    <string name="RESULT_RELATION_FRIEND_REMOVED">User removed from friends.</string>
    <string name="RESULT_RELATION_BLOCKED">Blocked user.</string>
    <string name="RESULT_RELATION_UNBLOCKED">Unblocked user.</string>
    <string name="ERROR_CONTENT_NOT_EXISTS">Error: Content not exist.</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="loadingloadingloading">Loading&#8230;</string>
    <string name="sign_in">SIGN IN</string>
    <string name="have_an_acc">Have an account? Sign in</string>
    <string name="change_units">Change units</string>
    <string name="set_radius">Set radius</string>
    <string name="show_points">Focus on which points after entering Map Screen?</string>
    <string name="p_nearest">Nearest</string>
    <string name="of_searching_bs">of searching bookshelves</string>
    <string name="open_source">Open source libraries</string>
</resources>