<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">>


    <CheckBoxPreference android:title="@string/change_units" android:key="unit"
        android:summary="km"
        android:defaultValue="false"/>

    <CheckBoxPreference android:title="@string/show_points" android:key="cam_focus"
        android:summary="@string/p_nearest"
        android:defaultValue="true"/>

    <com.futurologeek.smartcrossing.seekbar.SeekBarPreference
        android:key="radius"
        android:title="@string/set_radius"
        android:summary="@string/of_searching_bs"
        sample:msbp_dialogEnabled="false"
        android:defaultValue="30"
        sample:msbp_minValue="5"
        sample:msbp_maxValue="160"
        sample:msbp_interval="1"
        sample:msbp_measurementUnit="km"
        />


    <Preference
        android:key="libs"
        android:title="@string/open_source"/>

    <Preference
        android:key="log_out"
        android:title="@string/signout"/>


</PreferenceScreen>


