<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/ten"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty"
        android:id="@+id/add_a">

        <ImageView
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:id="@+id/imageView5"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/barcode_ico"
            android:layout_marginLeft="@dimen/thirteen"
            android:layout_marginStart="@dimen/thirteen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_book_a"
            android:layout_marginLeft="@dimen/five"
            android:id="@+id/textView14"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView5"
            android:layout_toEndOf="@+id/imageView5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty"
        android:id="@+id/add_m">

        <ImageView
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:id="@+id/imageView2"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/pen_ico"
            android:layout_marginLeft="@dimen/thirteen"
            android:layout_marginStart="@dimen/thirteen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_book_m"
            android:layout_marginLeft="@dimen/five"
            android:id="@+id/textView12"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty"
        android:id="@+id/add_p">

        <ImageView
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:id="@+id/imageView22"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/location_ico"
            android:layout_marginLeft="@dimen/thirteen"
            android:layout_marginStart="@dimen/thirteen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_station"
            android:id="@+id/textView25"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView22"
            android:layout_toEndOf="@+id/imageView22" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/ten"/>

</LinearLayout>